[fix foooter stretch]

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -357,20 +357,33 @@ main .main-section .selected::after{
 footer{
   justify-content: space-between;
 }
-footer .col{
-  flex-basis: calc(100%/3);
+footer .brano{
+  width: 200px;
+  height: 100%;
+  justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  margin: 0 15px;
 }
+footer .brano .icon a{
+  font-size: 0.8rem;
+}
+footer .brano .riproducted-song{
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 footer h3{
   margin: 0;
-  padding:0 30px;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 footer h4{
   margin: 0;
   padding:0;
+  text-align: left;
+  font-size: 0.7rem;
+  line-height: 0.8rem;
 }
+
 footer a{
   padding:0;
   
@@ -379,7 +392,7 @@ footer .brano img{
   width:40px;
 }
 footer .icon a{
-  padding: 0 10px;
+  padding: 0 5px;
 }
 .console.row{
   justify-content: center;
@@ -390,13 +403,17 @@ footer .icon a{
 }
 
 /*console*/
+footer .riproduction{
+  width: calc(100% - 400px);
+  height: 100%;
+}
 .console.row a{
   padding:20px 10px;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 footer .bar-background{
   position: relative;
-  width:80%;
+  width:60%;
   height: 3px;
   background-color: #5a5a5a;
   border-radius: 10px;
@@ -431,12 +448,19 @@ p{
 /*volume*/
 
 footer .settings .bar-background{
-  width: 20%;
+  width: 35%;
   margin: 0 10px;
 }
 footer .settings{
-  justify-content: end;
+  width: 200px;
+  height: 100%;
+  align-items: center;
+  justify-content: space-around;
 }
+footer .settings a{
+  font-size: 0.8rem;
+}
+
 
 /*@media*/
 @media (max-width:1100px){
